<resources>
    <string name="app_name" translatable="false">博客园</string>
    <string name="title_home" translatable="false">首页</string>
    <string name="title_blink" translatable="false">动态</string>
    <string name="title_question" translatable="false">问答</string>
    <string name="title_edu" translatable="false">班级</string>
    <string name="title_user" translatable="false">我的</string>
</resources>
