<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_blink"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_blink" />

    <item
        android:id="@+id/navigation_question"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/title_question" />
    <item
        android:id="@+id/navigation_edu"
        android:icon="@drawable/ic_people_three"
        android:title="@string/title_edu" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_user" />

</menu>
