<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.my_test6.home_module.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment_home" />

    <fragment
        android:id="@+id/navigation_blink"
        android:name="com.example.my_test6.blink_module.BlinkFragment"
        android:label="@string/title_blink"
        tools:layout="@layout/blink_fragment_home" />

    <fragment
        android:id="@+id/navigation_question"
        android:name="com.example.my_test6.question_module.QuestionFragment"
        android:label="@string/title_question"
        tools:layout="@layout/question_fragment_question" />
    <fragment
        android:id="@+id/navigation_edu"
        android:name="com.example.my_test6.edu_module.EduFragment"
        android:label="@string/title_edu"
        tools:layout="@layout/edu_fragment_edu" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.my_test6.user_module.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/user_fragment_user" />
</navigation>
